abi/vdj_plugin_abi.h

/* ============================================================================
   Basic Types and Constants
   ============================================================================ */

typedef int32_t HRESULT;
/* Video engines */
typedef enum {
    VdjVideoEngineAny = 0,
    VdjVideoEngineDirectX9 = 1,
    VdjVideoEngineOpenGL = 2,
    VdjVideoEngineDirectX11 = 3,
    VdjVideoEngineOpenGLES2 = 4,
    VdjVideoEngineMetal = 5,
    VdjVideoEngineAnyPtr = 6,
} EVdjVideoEngine;
/* ============================================================================
   Opaque Plugin Handles
   ============================================================================ */

typedef struct VdjPlugin VdjPlugin;
typedef struct VdjPluginVideoTransition VdjPluginVideoTransition;
typedef struct VdjPluginOnlineSource VdjPluginOnlineSource;
/* ============================================================================
   Callback Structures
   ============================================================================ */

/**
 * Callbacks provided by VirtualDJ to the plugin
 */
typedef struct {
    HRESULT (*send_command)(VdjPlugin *plugin, const char *command);
    HRESULT (*get_info)(VdjPlugin *plugin, const char *command, double *result);
    HRESULT (*get_string_info)(VdjPlugin *plugin, const char *command, char *result, int size);
    HRESULT (*declare_parameter)(VdjPlugin *plugin, void *parameter, int type, int id, 
                                 const char *name, const char *short_name, float default_value);
    HRESULT (*get_song_buffer)(VdjPlugin *plugin, int pos, int nb, int16_t **buffer);
} VdjCallbacks;
/**
 * Video-specific callbacks
 */
typedef struct {
    HRESULT (*draw_deck)(VdjPlugin *plugin);
    HRESULT (*get_device)(VdjPlugin *plugin, EVdjVideoEngine engine, void **device);
    HRESULT (*get_texture)(VdjPlugin *plugin, EVdjVideoEngine engine, void **texture, void **vertices);
} VdjVideoCallbacks;
/* ============================================================================
   Video Transition Plugin Functions
   ============================================================================ */

VdjPluginVideoTransition* vdj_plugin_video_transition_create(void);
void vdj_plugin_video_transition_release(VdjPluginVideoTransition *plugin);
HRESULT vdj_plugin_video_transition_init(VdjPluginVideoTransition *plugin, const VdjCallbacks *callbacks,
                                        const VdjVideoCallbacks *video_callbacks);
HRESULT vdj_plugin_video_transition_on_draw(VdjPluginVideoTransition *plugin, float crossfader);
HRESULT vdj_plugin_video_transition_on_device_init(VdjPluginVideoTransition *plugin);
HRESULT vdj_plugin_video_transition_on_device_close(VdjPluginVideoTransition *plugin);
int vdj_plugin_video_transition_get_width(VdjPluginVideoTransition *plugin);
int vdj_plugin_video_transition_get_height(VdjPluginVideoTransition *plugin);
int vdj_plugin_video_transition_get_sample_rate(VdjPluginVideoTransition *plugin);
int vdj_plugin_video_transition_get_song_bpm(VdjPluginVideoTransition *plugin);
double vdj_plugin_video_transition_get_song_pos_beats(VdjPluginVideoTransition *plugin);
/* ============================================================================
   Online Source Plugin Functions
   ============================================================================ */

VdjPluginOnlineSource* vdj_plugin_online_source_create(void);
void vdj_plugin_online_source_release(VdjPluginOnlineSource *plugin);
HRESULT vdj_plugin_online_source_init(VdjPluginOnlineSource *plugin, const VdjCallbacks *callbacks);
HRESULT vdj_plugin_online_source_is_logged(VdjPluginOnlineSource *plugin);
HRESULT vdj_plugin_online_source_on_login(VdjPluginOnlineSource *plugin);
HRESULT vdj_plugin_online_source_on_logout(VdjPluginOnlineSource *plugin);
HRESULT vdj_plugin_online_source_on_search(VdjPluginOnlineSource *plugin, const char *search, void *tracks_list);
HRESULT vdj_plugin_online_source_on_search_cancel(VdjPluginOnlineSource *plugin);