rs_core/ffi.rs


extern "C" {
    pub fn vdj_plugin_video_transition_create() -> *mut VdjPluginVideoTransition;
    pub fn vdj_plugin_video_transition_release(plugin: *mut VdjPluginVideoTransition);
    pub fn vdj_plugin_video_transition_init(plugin: *mut VdjPluginVideoTransition, callbacks: *const VdjCallbacks, video_callbacks: *const VdjVideoCallbacks) -> HRESULT;
    pub fn vdj_plugin_video_transition_on_draw(plugin: *mut VdjPluginVideoTransition, crossfader: f32) -> HRESULT;
    pub fn vdj_plugin_video_transition_on_device_init(plugin: *mut VdjPluginVideoTransition) -> HRESULT;
    pub fn vdj_plugin_video_transition_on_device_close(plugin: *mut VdjPluginVideoTransition) -> HRESULT;
    pub fn vdj_plugin_video_transition_get_width(plugin: *mut VdjPluginVideoTransition) -> i32;
    pub fn vdj_plugin_video_transition_get_height(plugin: *mut VdjPluginVideoTransition) -> i32;
    pub fn vdj_plugin_video_transition_get_sample_rate(plugin: *mut VdjPluginVideoTransition) -> i32;
    pub fn vdj_plugin_video_transition_get_song_bpm(plugin: *mut VdjPluginVideoTransition) -> i32;
    pub fn vdj_plugin_video_transition_get_song_pos_beats(plugin: *mut VdjPluginVideoTransition) -> f64;
}

/* ============================================================================
   Online Source Plugin FFI Functions
   ============================================================================ */

extern "C" {
    pub fn vdj_plugin_online_source_create() -> *mut VdjPluginOnlineSource;
    pub fn vdj_plugin_online_source_release(plugin: *mut VdjPluginOnlineSource);
    pub fn vdj_plugin_online_source_init(plugin: *mut VdjPluginOnlineSource, callbacks: *const VdjCallbacks) -> HRESULT;
    pub fn vdj_plugin_online_source_is_logged(plugin: *mut VdjPluginOnlineSource) -> HRESULT;
    pub fn vdj_plugin_online_source_on_login(plugin: *mut VdjPluginOnlineSource) -> HRESULT;
    pub fn vdj_plugin_online_source_on_logout(plugin: *mut VdjPluginOnlineSource) -> HRESULT;
    pub fn vdj_plugin_online_source_on_search(plugin: *mut VdjPluginOnlineSource, search: *const u8, tracks_list: *mut c_void) -> HRESULT;
    pub fn vdj_plugin_online_source_on_search_cancel(plugin: *mut VdjPluginOnlineSource) -> HRESULT;
}
